// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`getStaticDateRanges should create dateRanges for vod 1`] = `
[
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A05.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CONTENT-MAY-VARY": "YES",
      "CUE": "ONCE,PRE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
      "TIMELINE-OCCUPIES": "POINT",
      "TIMELINE-STYLE": "HIGHLIGHT",
    },
    "id": "1619950325250",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 5,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950325250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A15.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CONTENT-MAY-VARY": "YES",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
      "TIMELINE-OCCUPIES": "POINT",
      "TIMELINE-STYLE": "HIGHLIGHT",
    },
    "id": "1619950335250",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 15,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950335250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A35.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CONTENT-MAY-VARY": "YES",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "RESUME-OFFSET": 0,
      "TIMELINE-OCCUPIES": "POINT",
      "TIMELINE-STYLE": "HIGHLIGHT",
    },
    "id": "1619950355250",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 35,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950355250,
      "weekData": null,
    },
  },
]
`;

exports[`getStaticDateRanges should create dateRanges for live 1`] = `
[
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A05.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CONTENT-MAY-VARY": "YES",
      "CUE": "ONCE,PRE",
      "RESTRICT": "SKIP,JUMP",
      "TIMELINE-OCCUPIES": "POINT",
      "TIMELINE-STYLE": "HIGHLIGHT",
    },
    "id": "1619950325250",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 5,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950325250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A15.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CONTENT-MAY-VARY": "YES",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "TIMELINE-OCCUPIES": "POINT",
      "TIMELINE-STYLE": "HIGHLIGHT",
    },
    "id": "1619950335250",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 15,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950335250,
      "weekData": null,
    },
  },
  {
    "classId": "com.apple.hls.interstitial",
    "clientAttributes": {
      "ASSET-LIST": "stitcher-endpoint/out/asset-list.json?dt=2021-05-02T10%3A12%3A35.250%2B00%3A00&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
      "CONTENT-MAY-VARY": "YES",
      "CUE": "ONCE",
      "RESTRICT": "SKIP,JUMP",
      "TIMELINE-OCCUPIES": "POINT",
      "TIMELINE-STYLE": "HIGHLIGHT",
    },
    "id": "1619950355250",
    "startDate": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 35,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950355250,
      "weekData": null,
    },
  },
]
`;

exports[`getAssets should get assets by interstitials 1`] = `
[
  {
    "duration": 10,
    "kind": "ad",
    "url": "https://mock.com/interstitial1/master.m3u8",
  },
  {
    "duration": 25,
    "url": "https://mock.com/ad_1/master.m3u8",
  },
]
`;
